--- a/download/download/index.html
+++ b/download/download/index.html
@@ -166,8 +166,8 @@
                 </div>
             </div>
             <div class="caption" style="text-align: justify; width: 98%; margin: 0 auto;">
-            Fig. 1 The top-view schematic of the dataset scenarios. The lateral shadowing of the DCV in the CCRs and CCRm scenarios
-            indicates that data were collected across different lane positions.
+            Fig. 1 The top-view schematic of the dataset scenarios. The arrow represents the direction of movement. The lateral
+            shadowing of the DCV in the CCRs and CCRm scenarios indicates that data are collected across different lane positions.
             </div>
 
             <p><br></p>
