Add depth map for all sequences

--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
     <div class="table-responsive">
       <table class="table table-sm table-borderless"> 
         <tr>
+          <th scope="row">Feb. 3, 2025</th>
+          <td>
+            <a href="/EvTTC/download/download/" target="_blank" rel="noopener noreferrer">Depth maps </a>for all sequences are now available.
+          </td>
+        </tr> 
+        <tr>
           <th scope="row">Dec. 5, 2024</th>
           <td>
             Watch our video on <a href="https://www.youtube.com/watch?v=qJC016GK888" target="_blank" rel="noopener noreferrer">Youtube</a>.
