Add TABLE. 1: Details about the dataset sequences.

--- a/download/download/index.html
+++ b/download/download/index.html
@@ -169,7 +169,22 @@
             Fig. 1 The top-view schematic of the dataset scenarios. The arrow represents the direction of movement. The lateral
             shadowing of the DCV in the CCRs and CCRm scenarios indicates that data are collected across different lane positions.
             </div>
+            <p><br></p>
+            <div class="caption" style="text-align: center; font-weight: bold; width: 98%; margin: 0 auto;">
+                TABLE. 1 Details about the dataset sequences.
+            </div>            
+            <div class="row">
+                <div class="col-sm mt-3 mt-md-0">
+                    <figure>
 
+                    <picture>
+                    <!-- Fallback to the original file -->
+                    <div style="text-align: center;">
+                        <p><img src="/EvTTC/assets/img/sequences.png" alt="sensor" style="max-width:98%;"></p>
+                    </div>
+                    </picture>
+                </div>
+            </div>
             <p><br></p>
 
             <h3><strong>Car-to-Car Rear scenarios</strong></h3>
