Updated all Prophesee EVKv4 parameters.

--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
     <div class="table-responsive">
       <table class="table table-sm table-borderless"> 
         <tr>
+          <th scope="row">Feb. 4, 2025</th>
+          <td>
+          <a href="/EvTTC/assets/camera_parameters/" target="_blank" rel="noopener noreferrer">All parameters</a> of the Prophesee EVKv4 are now available.
+          </td>
+        </tr> 
+        <tr>
           <th scope="row">Feb. 3, 2025</th>
           <td>
             <a href="/EvTTC/download/download/" target="_blank" rel="noopener noreferrer">Depth maps </a>for all sequences are now available.
