Updated the parameters of Prophesee EVK4.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <tr>
           <th scope="row">Feb. 4, 2025</th>
           <td>
-          <a href="https://github.com/NAIL-HNU/EvTTC/tree/main/assets/camera_parameters" target="_blank" rel="noopener noreferrer">All parameters</a> of the Prophesee EVKv4 are now available.
+          <a href="https://github.com/NAIL-HNU/EvTTC/tree/main/assets/camera_parameters" target="_blank" rel="noopener noreferrer">All parameters</a> of the Prophesee EVK4 are now available.
           </td>
         </tr> 
         <tr>
