Updated detailed results of the TTC Benchmark.

--- a/competition/index.html
+++ b/competition/index.html
@@ -231,7 +231,7 @@
 
       <article>
         <p>
-          This TTC benchmark includes 10 sequences, covering three main types of scenes: CCRs, CCRm, and Slider. You can directly download these data to evaluate your algorithm.
+          This TTC benchmark includes 10 sequences, covering three main types of scenes: CCRs, CCRm, and Slider. You can directly download these data to evaluate your algorithm. Line chart of <strong><a href="/EvTTC/assets/pdf/results.pdf" rel="noopener noreferrer">the test results</a></strong> of all algorithms over time.
         </p>
         <ul>
           <!-- Each list item is a link that will scroll to a specific section -->
