--- a/index.html
+++ b/index.html
@@ -179,21 +179,27 @@
     <div class="table-responsive">
       <table class="table table-sm table-borderless"> 
         <tr>
+          <th scope="row">Feb. 19, 2025</th>
+          <td>
+          Updated <strong><a href="/EvTTC/assets/pdf/results.pdf" rel="noopener noreferrer">detailed results</a></strong> of the TTC Benchmark.
+          </td>
+        </tr> 
+        <tr>
           <th scope="row">Feb. 4, 2025</th>
           <td>
-          <a href="https://github.com/NAIL-HNU/EvTTC/tree/main/assets/camera_parameters" target="_blank" rel="noopener noreferrer">All parameters</a> of the Prophesee EVK4 are now available.
+            <strong><a href="https://github.com/NAIL-HNU/EvTTC/tree/main/assets/camera_parameters" target="_blank" rel="noopener noreferrer">All parameters</a></strong> of the Prophesee EVK4 are now available.
           </td>
         </tr> 
         <tr>
           <th scope="row">Feb. 3, 2025</th>
           <td>
-            <a href="/EvTTC/download/download/" target="_blank" rel="noopener noreferrer">Depth maps </a>for all sequences are now available.
+            <strong><a href="/EvTTC/download/download/" target="_blank" rel="noopener noreferrer">Depth maps</a></strong> for all sequences are now available.
           </td>
         </tr> 
         <tr>
           <th scope="row">Dec. 5, 2024</th>
           <td>
-            Watch our video on <a href="https://www.youtube.com/watch?v=qJC016GK888" target="_blank" rel="noopener noreferrer">Youtube</a>.
+            Watch our video on <strong><a href="https://www.youtube.com/watch?v=qJC016GK888" target="_blank" rel="noopener noreferrer">Youtube</a></strong>.
           </td>
         </tr> 
         <tr>
