Updated annotations of bounding boxes and segmentation for objects/subjects.

--- a/about/sensor/index.html
+++ b/about/sensor/index.html
@@ -255,7 +255,7 @@ control of speed.
 </ul>
 
 <p><strong>Open Source</strong></p>
-<p>Design of the <a href="" target="_blank" rel="noopener noreferrer">CAD model</a> for the small-scale TTC testbed.</p>
+<p>Design of the <a href="https://drive.google.com/drive/folders/1K00cNLa-jA9EK-ja0L5UTS0yjDGlpuwF?usp=drive_link" target="_blank" rel="noopener noreferrer">CAD model</a> for the small-scale TTC testbed.</p>
 
 <p><br></p>
 <p><br></p>
