--- a/index.html
+++ b/index.html
@@ -179,6 +179,18 @@
     <div class="table-responsive">
       <table class="table table-sm table-borderless"> 
         <tr>
+          <th scope="row">Mar. 2, 2025</th>
+          <td>
+            Updated <strong><a href="/EvTTC/download/download/" rel="noopener noreferrer">annotations of bounding boxes and segmentation</a></strong> for objects/subjects.
+          </td>
+        </tr> 
+        <tr>
+          <th scope="row">Mar. 2, 2025</th>
+          <td>
+          Updated <strong><a href="/EvTTC/download/download/" rel="noopener noreferrer">ground-truth TTC</a></strong>.
+          </td>
+        </tr> 
+        <tr>
           <th scope="row">Feb. 19, 2025</th>
           <td>
           Updated <strong><a href="/EvTTC/assets/pdf/results.pdf" rel="noopener noreferrer">detailed results</a></strong> of the TTC Benchmark.
