--- a/download/download/index.html
+++ b/download/download/index.html
@@ -673,6 +673,37 @@
                     </li>
                 </div>
             </div>
+
+            
+            <p><br></p>
+            <div class="row">
+                <div class="col-sm mt-3 mt-md-0">
+                    <figure>
+                        <picture>
+                            <!-- Fallback to the original file -->
+                            <img class="img-fluid rounded z-depth-1" src="/EvTTC/assets/img/turn-90-degree.png" title="CPNAO">
+                        </picture>
+                    </figure>
+                </div>
+            </div>
+
+            <div class="content-box">
+                <h4><strong>turn-90-degree</strong></h4>
+                <br>
+                <div class="col-sm mt-3 mt-md-0">
+
+                    <li>
+                        <strong>sequence 1</strong>:   
+                        <a href="" target="_blank" rel="noopener noreferrer">video ( M)</a>   |  
+                        <a href="" target="_blank" rel="noopener noreferrer">hdf5 ( G)</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">gt-ttc</a>   |   
+                        <a href="" target="_blank" rel="noopener noreferrer">raw bag ( G)</a>
+                        <br>  |   <a href="" target="_blank" rel="noopener noreferrer">gt-depth ( M)</a>
+                          |   <a href="" target="_blank" rel="noopener noreferrer">bbox-segmentation</a>
+                          |   <a href="" target="_blank" rel="noopener noreferrer">download-full-sequence</a>
+                    </li>
+                </div>
+            </div>
         
         </article>
     </div>
