Fixed the download link.

--- a/download/download/index.html
+++ b/download/download/index.html
@@ -687,7 +687,7 @@
                 </div>
             </div>
 
-            <div class="content-box">
+            <!-- <div class="content-box">
                 <h4><strong>turn-90-degree</strong></h4>
                 <br>
                 <div class="col-sm mt-3 mt-md-0">
@@ -703,7 +703,7 @@
                           |   <a href="" target="_blank" rel="noopener noreferrer">download-full-sequence</a>
                     </li>
                 </div>
-            </div>
+            </div> -->
         
         </article>
     </div>
