Fixed the download link.

--- a/download/download/index.html
+++ b/download/download/index.html
@@ -675,17 +675,16 @@
             </div>
 
             
-            <p><br></p>
+            <!-- <p><br></p>
             <div class="row">
                 <div class="col-sm mt-3 mt-md-0">
                     <figure>
                         <picture>
-                            <!-- Fallback to the original file -->
                             <img class="img-fluid rounded z-depth-1" src="/EvTTC/assets/img/turn-90-degree.png" title="CPNAO">
                         </picture>
                     </figure>
                 </div>
-            </div>
+            </div> -->
 
             <!-- <div class="content-box">
                 <h4><strong>turn-90-degree</strong></h4>
